--- a/unit1.lfm
+++ b/unit1.lfm
@@ -3789,4 +3789,28 @@ object Form1: TForm1
     Caption = 'Label10'
     ParentColor = False
   end
+  object Label11: TLabel
+    Left = 10
+    Height = 15
+    Top = 10
+    Width = 40
+    Caption = 'Label11'
+    ParentColor = False
+  end
+  object Label12: TLabel
+    Left = 168
+    Height = 15
+    Top = 244
+    Width = 40
+    Caption = 'Label12'
+    ParentColor = False
+  end
+  object Label13: TLabel
+    Left = 196
+    Height = 15
+    Top = 272
+    Width = 40
+    Caption = 'Label13'
+    ParentColor = False
+  end
 end
