--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 1234
+  Left = 1290
   Height = 1017
-  Top = 458
+  Top = 490
   Width = 1920
   Caption = 'Pascalcity'
   ClientHeight = 1017
@@ -3847,5 +3847,34 @@ object Form1: TForm1
     Top = 718
     Width = 135
     OnClick = Image6Click
+  end
+  object Button2: TButton
+    Left = 1720
+    Height = 38
+    Top = 928
+    Width = 113
+    Caption = 'Button2'
+    OnClick = Button2Click
+    TabOrder = 4
+  end
+  object Button3: TButton
+    Left = 1585
+    Height = 38
+    Top = 944
+    Width = 113
+    Caption = 'Button3'
+    OnClick = Button3Click
+    TabOrder = 5
+  end
+  object SaveDialog1: TSaveDialog
+    FileName = 'unnammed.pasc'
+    Filter = 'Pascalcity|*.pasc'
+    Left = 64
+    Top = 64
+  end
+  object OpenDialog1: TOpenDialog
+    Filter = 'Pascalcity|*.pasc'
+    Left = 171
+    Top = 61
   end
 end
